--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./lib/index.js",
   "types": "./lib/src/index.d.ts",
   "scripts": {
-    "build": "rollup --config rollup.config.js"
+    "build": "rm -rf ./lib && rollup --config rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "eslint": "^8.10.0",
+    "jest": "^27.5.1",
     "rollup": "^2.70.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-dts": "^4.2.0",
