--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "./lib/index.js",
   "types": "./lib/src/index.d.ts",
   "scripts": {
-    "build": "rm -rf ./lib && rollup --config rollup.config.js"
+    "build": "rm -rf ./lib && rollup --config rollup.config.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,11 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-dts": "^4.2.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript2": "^0.31.2"
+    "rollup-plugin-typescript2": "^0.31.2",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "@types/jest": "^27.4.1"
   }
 }
