--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest": "^27.5.1",
     "rollup": "^2.70.0",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^4.2.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript2": "^0.31.2",
