--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "browser": "./lib/index.umd.js",
   "types": "./lib/src/index.d.ts",
   "scripts": {
+    "dev": "rollup --config rollup.config.dev.js --watch",
     "build": "rm -rf ./lib && rollup --config rollup.config.js",
     "test": "jest",
     "prepare": "husky install"
@@ -28,7 +29,9 @@
     "rollup": "^2.70.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-typescript2": "^0.31.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
